gcc-14.2.0/gcc/testsuite/gdc.test/compilable/issue22130.d
version https://git-lfs.github.com/spec/v1
oid sha256:04a3e79a40862b8ed87eaae02d731f65a45fbb13d8811e973e123580cac63e53
size 221
