gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail56.d
version https://git-lfs.github.com/spec/v1
oid sha256:9bd66cd6cb24a2e7d1ada45a4fa5621110d25e36ae77994112dc4dd533df1043
size 611
